--- a/apple.html
+++ b/apple.html
@@ -12,19 +12,19 @@
 
     <tr>
         <th>
-            Mac
+            Mac (aukaat ke bahr)
         </th> 
         <th>
-            iPad
+            iPad (aukaat ke bahr)
         </th>
-        <th> Phone </th>
+        <th> Phone hmmm.. (aukaat ke bahr) </th>
 
-        <th> Watch </th>
-        <th> TV </th>
-        <th> Music </th>
-        <th> Sport</th>
+        <th> Watch (aukaat ke bahr) </th>
+        <th> TV (aukaat ke bahr) </th>
+        <th> Music (aukaat ke bahr) </th>
+        <th> Sport (aukaat ke bahr)</th>
 
-        <th> Where to buy</th>
+        <th> Where to buy (isi site be...)</th>
     </tr>
     </tr>
 </table>
@@ -41,4 +41,6 @@
 
 </body>
 </html>
+
+
 
